# fish_toxicity_data_curation_and_model_benchmarking

./: logger.py  pyproject.toml
analyse_predictions/: 01_orthogonal_regression.py  02_structure_breakdown.py  regression.py
cheminformatics/: fingerprint_descriptor_distances.py  rdkit_toolkit.py  standardise_check.py
process_REACH_data/: 02_1_parse_acute_fish_toxicity_data.py  02_2_process_acute_fish_toxicity_data.py  02_3_dot_plot_acute_fish_toxicity_data.py  03_1_parse_chronic_fish_toxicity_data.py  03_2_process_chronic_fish_toxicity_data.py  03_3_dot_plot_chronic_fish_toxicity_data.py  04_standardise_structures.py  05_experimental_data_analysis.py  06_radial_dendrogram_plot.py  07_local_predictive_performance.py  document_processing.py  process_conclusions_executive_summary.py  process_nominal_measured_concentrations.py
process_predictions/: 01_collect_predictions_opera.py  02_collect_predictions_ecosar.py  03_collect_predictions_vega.py  04_01_prepare_isaferat_input_with_opera_MP.py  04_02_collect_predictions_isaferat.py  05_collect_predictions_test.py  06_collect_predictions_kate.py  07_collect_predictions_trident.py  08_collect_ACD_percepta_dissociation.py  ACD_Percepta.py
